fix group projects searchbox and category dropdown alignment

--- a/views/assets/src/helpers/less/customization/pm-overview.less
+++ b/views/assets/src/helpers/less/customization/pm-overview.less
@@ -24,6 +24,7 @@ i {
     .pm-header {
         .pm-project-search {
             input  {
+				max-width: 18rem;
                 &.pm-search {
                     display: inline-block;
                     height: 38px !important;
@@ -245,8 +246,9 @@ i {
 	    flex-direction: row-reverse;
 	    align-items: center;
 	    padding: 13px 0;
-		.pm-view-style-group {
-			margin-left: 15px !important;
+		min-width: 18rem;
+		ul.pm-view-style-group {
+			margin-left: auto !important;
 			border: var(--pm-content-background-color) solid 2px;
 			border-radius: @theme-border-radius;
 			background: var(--pm-content-background-color);
